Add last updated footer

--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,8 @@ title: "Benjamin Porter"
 params:
   tagline: "Software Engineer at Affirm"
 
+enableGitInfo: true
+
 disableKinds:
   - taxonomy
   - taxonomyTerm
