--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,9 @@ title: Benjamin Porter
 
 params:
   tagline:
-    - Software Engineer at Affirm
-    - Terraform Writer at Affirm
+    - Software Engineer
+    - Terraform Engineer
+    - YAML Engineer
   emoji:
     - 🍓
     - 🌮
